[tool.poetry]
name = "typer-common-options"
version = "0.1.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
readme = "README.md"
packages = [{include = "typer_common_options"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
